add new signatories

--- a/index.html
+++ b/index.html
@@ -290,6 +290,9 @@
             <li>Brendon Nacewicz, Psychiatrist, Neuroscience Researcher</li>
             <li>Kat Naphas</li>
             <li><a href="https://jacky.wtf/about">Jacky Alcine</a>, Software Engineer</li>
+            <li><a href="https://allisonmasangkay.com">Allison Masangkay</a></li>
+            <li>Sam Reider, Student</li>
+            <li>Crystaline (Crys) Charity</li>
         </ul>
 
     </main>
@@ -303,7 +306,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-07-26. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-07-31. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
