--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
             <li><a href="https://allisonmasangkay.com">Allison Masangkay</a></li>
             <li>Sam Reider, Student</li>
             <li>Crystaline (Crys) Charity</li>
+            <li><a href="https://www.linkedin.com/in/philip-khor/">Philip Khor</a></li>
         </ul>
 
     </main>
@@ -306,7 +307,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-07-31. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-08-14. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
