whole buncha new signatories

--- a/index.html
+++ b/index.html
@@ -294,6 +294,12 @@
             <li>Sam Reider, Student</li>
             <li>Crystaline (Crys) Charity</li>
             <li><a href="https://www.linkedin.com/in/philip-khor/">Philip Khor</a></li>
+            <li><a href="https://www.linkedin.com/in/raquel-donahue-42235018">Raquel Donahue</a>, Academic Librarian</li>
+            <li><a href="https://christoph-becker.info/">Christoph Becker</a>, Professor</li>
+            <li>Jun Wu</li>
+            <li><a href="https://mastodon.nz/@timClicks">Tim McNamara</a>, Meetup organiser, conference organiser, tech educator</li>
+            <li><a href="https://dotnet.social/@jackal">Jack Calkins</a>, Software Engineer</li>
+            <li>Geoff Berner, Musician</li>
         </ul>
 
     </main>
@@ -307,7 +313,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-08-14. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2023-10-06. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
