add latest signatories

--- a/index.html
+++ b/index.html
@@ -299,6 +299,10 @@
             <li><a href="https://mastodon.nz/@timClicks">Tim McNamara</a>, Meetup organiser, conference organiser, tech educator</li>
             <li><a href="https://dotnet.social/@jackal">Jack Calkins</a>, Software Engineer</li>
             <li>Geoff Berner, Musician</li>
+            <li><a href="https://www.allkindsaccessibility.com">Shelby Seier</a>, Lead Consultant, All Kinds Accessibility Consulting</li>
+            <li><a href="https://twitter.com/@gisherpenguin">Sophie Ciurlik Rittenbaum</a>, elected representative and campaigner</li>
+            <li>Kamil</li>
+            <li>Jayden, Engineer</li>
         </ul>
 
     </main>
@@ -312,7 +316,7 @@
                 </p>
 
                 <p>
-                    Last updated 2023-10-06. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2024-01-13. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
