add Kiwi PyCon as a signatory

--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
         <a href="https://publichealthpledge.com/assets/event_signatory_guide.pdf"><em>Add your event or organization</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
 
         <div id="logos">
+            <a href="https://kiwipycon.nz/" title="Kiwi PyCon"><img src="assets/orgs/KiwiPyCon.png" alt="Kiwi PyCon logo"></a>
+            <a href="https://northbaypython.org/" title="North Bay Python"><img src="assets/orgs/NorthBayPython.png" alt="North Bay Python logo"></a>
             <a href="https://openinfra.dev/summit" title="OpenInfra Summit Vancouver 2023"><img src="assets/orgs/OpenInfraSummit.png" alt="OpenInfra Summit Vancouver logo"></a>
-            <a href="https://2023.northbaypython.org/" title="North Bay Python 2023"><img src="assets/orgs/NorthBayPython.png" alt="North Bay Python logo"></a>
         </div>
 
         <h2 class="display-4">Individual Signatories</h2>
@@ -316,7 +317,7 @@
                 </p>
 
                 <p>
-                    Last updated 2024-01-13. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2024-03-19. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
