swap to privacy respecting form provider

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
 
         <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="social">
-            <li class="nav-item"><a class="nav-link btn btn-primary" href="https://forms.gle/CuMEJ4NoQzqoamnB9" id="cta-add-your-name"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a></li>
+            <li class="nav-item"><a class="nav-link btn btn-primary" href="https://cryptpad.fr/form/#/2/form/view/peBei9qIVMsYWTCANInTf1aaCrwRpsoIYneI1xm-udg/" id="cta-add-your-name"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a></li>
             <li class="nav-item"><a class="nav-link social-icon" href="https://floss.social/@PHPledge"><span class="fa-brands fa-mastodon" aria-hidden="true"></span><span class="sr-only">@PHPledge on Mastodon</span></a></li>
             <li class="nav-item"><a class="nav-link social-icon icon-envelope" href="mailto:phpledge@googlegroups.com"><span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a></li>
         </ul>
@@ -71,7 +71,7 @@
                     <li>The event’s policy includes active measures designed to minimize the number of participants who are infected with transmissible diseases like COVID-19, as well as mitigate transmission between participants.</li>
                 </ol>
 
-                <a class="btn btn-link" href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+                <a class="btn btn-link" href="https://cryptpad.fr/form/#/2/form/view/peBei9qIVMsYWTCANInTf1aaCrwRpsoIYneI1xm-udg/"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
 
                 <a class="btn btn-link" href="https://publichealthpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
             </div>
@@ -115,7 +115,7 @@
 
         <h2 class="display-4">Individual Signatories</h2>
 
-        <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+        <a href="https://cryptpad.fr/form/#/2/form/view/peBei9qIVMsYWTCANInTf1aaCrwRpsoIYneI1xm-udg/"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
 
         <ul class="list-unstyled">
             <li><a href="https://joshsimmons.com">Joshua R. Simmons</a>, Partner at Open Chapters, former Chair of Open Source Initiative</li>
@@ -310,14 +310,14 @@
 
     <footer class="container-fluid">
                 <p id="footer-links">
-                    <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
+                    <a href="https://cryptpad.fr/form/#/2/form/view/peBei9qIVMsYWTCANInTf1aaCrwRpsoIYneI1xm-udg/"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
                     <a href="https://publichealthpledge.com/assets/event_signatory_guide.pdf"><em>Add your event</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a>
                     <a class="social-icon" href="https://floss.social/@phpledge" rel="me">Find @PHPledge on Mastodon <span class="fa-brands fa-mastodon" aria-hidden="true"></span></a></li>
                     <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com">Email <span class="fa-solid fa-envelope" aria-hidden="true"></span><span class="sr-only">Email phpledge@googlegroups.com</span></a>
                 </p>
 
                 <p>
-                    Last updated 2024-03-19. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2024-03-31. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
